--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,18 +14,37 @@ on:
 jobs:
   ansible-deploy:
     runs-on: ubuntu-latest
+    env:
+      PAT_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      AZURE_SECRET: ${{ secrets.AZURE_SECRET }}
+      AZURE_TENANT: ${{ secrets.AZURE_TENANT }}
+      VOC_KEY: ${{ secrets.VOC_KEY }}
+      ANSIBLE_USER: ${{ secrets.ANSIBLE_USER }}
+
 
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout Code
+
+      - name: GIT | Checkout
         uses: actions/checkout@v3
 
-      # Step 2: Set up Python and Install Ansible
-      - name: Set up Python and Install Ansible
+
+      - name: SETUP | Key Pair
+        working-directory: ~/.ssh
+        run: |
+          echo "${{ secrets.KP }}" > connectify_kp.pem
+          sudo chmod 600 connectify_kp.pem
+
+      - name: Python | Install
         uses: actions/setup-python@v4
         with:
           python-version: "3.9"
-      - name: Install Ansible
+
+      - name: Ansible | Setup
         run: |
           python -m pip install --upgrade pip
           pip install ansible
+          ansible-galaxy collection install azure.azcollection
+          ansible-inventory -i atc_azure_rm.yaml --private-key  -- graph
+
