test dynamic inventory

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
 
 
       - name: SETUP | Key Pair
-        working-directory: key_pairs
         run: |
+          mkdir key_pairs
           echo "${{ secrets.KP }}" > connectify_kp.pem
           sudo chmod 600 connectify_kp.pem
 
