--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,5 +45,5 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ansible
-          ansible-inventory -i atc_azure_rm.yaml --private-key ./key_pairs/connectify_kp.pem -u ${{ secrets.ANSIBLE_USER }} -e 'ansible_ssh_common_args="-o StrictHostKeyChecking=no"'  --graph
+          ansible-inventory -i atc_azure_rm.yaml --graph
 
