--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ansible
-          az account show
+          echo "Ansible User: $ANSIBLE_USER"
           ansible-inventory -i atc_azure_rm.yaml --graph
 
