--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
       AZURE_TENANT: ${{ secrets.AZURE_TENANT }}
       VOC_KEY: ${{ secrets.VOC_KEY }}
       ANSIBLE_USER: ${{ secrets.ANSIBLE_USER }}
+      ANSIBLE_USERs: "TEST"
 
 
     steps:
@@ -45,6 +46,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ansible
-          echo "Ansible User: $ANSIBLE_USER"
+          echo "Ansible User: $ANSIBLE_USERs"
           ansible-inventory -i atc_azure_rm.yaml --graph
 
