--- a/atc_azure_rm.yaml
+++ b/atc_azure_rm.yaml
@@ -1,4 +1,3 @@
----
 plugin: azure.azcollection.azure_rm
 auth_source: auto
 include_vm_resource_groups:
@@ -8,6 +7,6 @@ keyed_groups:
     prefix: env_
     separator: ""
 filters:
-  power_state: "running"  # Changed from instance-state-name
+  power_state: "VM running"  
 compose:
-  ip: public_ip_address
+  ansible_host: public_ip_address 
