--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ansible
-          echo "Ansible User: $ANSIBLE_USERs"
+          ansible-galaxy collection list | grep azure.azcollection
+          ansible-galaxy collection install azure.azcollection --force
           ansible-inventory -i atc_azure_rm.yaml --graph
 
