--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,8 +45,7 @@ jobs:
       - name: Ansible | Setup
         run: |
           python -m pip install --upgrade pip
-          pip install ansible
-          ansible-galaxy collection list | grep azure.azcollection
-          ansible-galaxy collection install azure.azcollection --force
+          pip install ansible==2.17.9
+          ansible-galaxy collection install azure.azcollection:2.7.0 --force
           ansible-inventory -i atc_azure_rm.yaml --graph
 
