test dynamic inventory

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,5 @@
+[defaults]
+inventory = ./atc_azure_rm.yaml
+
 [inventory]
 enable_plugins = yaml, constructed, auto, script, ini, toml, amazon.aws.aws_ec2, azure.azcollection.azure_rm
