--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Ansible | Setup
         run: |
-          python -m pip install --upgrade pip
+          python3 -m pip install --upgrade pip
           pip install ansible==10.7.0
           ansible-galaxy collection install azure.azcollection:2.7.0 --force
 
