--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,8 @@ jobs:
 
       - name: Ansible | Setup
         run: |
+          python3 -m venv .venv
+          source .venv/bin/activate
           python3 -m pip install --upgrade pip
           pip install ansible==10.7.0
           ansible-galaxy collection install azure.azcollection:2.7.0 --force
