test dynamic inventory

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,8 @@
 [defaults]
 inventory = ./atc_azure_rm.yaml
+collections_paths = ./.venv/lib/python3.10/site-packages/ansible_collections
+library = ./.venv/lib/python3.10/site-packages/ansible/plugins/modules
+
 
 [inventory]
 enable_plugins = yaml, constructed, auto, script, ini, toml, amazon.aws.aws_ec2, azure.azcollection.azure_rm
