--- a/atc_azure_rm.yaml
+++ b/atc_azure_rm.yaml
@@ -1,5 +1,6 @@
 ---
 plugin: azure.azcollection.azure_rm
+azure_cloud: AzureCloud
 auth_source: auto
 include_vm_resource_groups:
   - ATC-DEV-RESOURCE-GROUP
@@ -8,6 +9,6 @@ keyed_groups:
     prefix: env_
     separator: ""
 filters:
-  power_state: "running"  
+  power_state: "VM running"
 compose:
-  ip: public_ip_address
+  ansible_host: public_ip_address
