--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,7 +1,11 @@
 [defaults]
 inventory = ./atc_azure_rm.yaml
-collections_paths = ./.venv/lib/python3.10/site-packages/ansible_collections
+remote_user = adminuser
+private_key_file = ~/.ssh/connectify_kp
+collections_path = ./.venv/lib/python3.10/site-packages/ansible_collections
 library = ./.venv/lib/python3.10/site-packages/ansible/plugins/modules
+
+
 
 
 [inventory]
