--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,8 @@ jobs:
       - name: SETUP | Key Pair
         run: |
           mkdir key_pairs
-          echo "${{ secrets.KP }}" > connectify_kp.pem
-          sudo chmod 600 connectify_kp.pem
+          echo "${{ secrets.KP }}" > connectify_kp
+          sudo chmod 600 connectify_kp
 
       - name: Python | Install
         uses: actions/setup-python@v4
@@ -88,4 +88,4 @@ jobs:
 
       - name: Ansible | Execute
         run: |
-          ansible-playbook frontend_playbook.yml -i "${{secrets.HOST_VM}}," -e "ansible_user=${{secrets.ANSIBLE_USER}} ansible_ssh_private_key_file=.key_pairs/connectify_kp.pub"
+          ansible-playbook frontend_playbook.yml -i "${{secrets.HOST_VM}}," -e "ansible_user=${{secrets.ANSIBLE_USER}} ansible_ssh_private_key_file=.key_pairs/connectify_kp"
