--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -88,5 +88,7 @@ jobs:
 
       - name: Ansible | Execute
         run: |
-          ansible-playbook frontend_playbook.yml -i "${{secrets.HOST_VM}}," --private-key ./key_pairs/connectify_kp -u ${{ secrets.ANSIBLE_USER }} -e 'ansible_ssh_common_args="-o StrictHostKeyChecking=no"'
+          ls
+          ansible-playbook frontend_playbook.yml -i "${{secrets.HOST_VM}}," -e "ansible_user=${{secrets.ANSIBLE_USER}} ansible_ssh_private_key_file=./key_pairs/connectify_kp"
+
           
