changed workflow implementation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,14 +2,8 @@
 name: Ansible Deployment
 
 on:
-  push:
-    branches: [ "dev_test" ]
-  pull_request:
-    branches: [ "main" ]
-
   repository_dispatch:
-      types:
-        - build_complete
+    types: [build_complete]
 
 permissions:
   contents: write
