--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,78 @@
-# This is a basic workflow to help you get started with Actions
+name: Ansible Deployment
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  repository_dispatch:
+    types: [build_complete]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+permissions:
+  contents: write
+  pull-requests: write
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  ansible-deploy:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    env:
+      AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+      AZURE_SECRET: ${{ secrets.AZURE_SECRET }}
+      AZURE_TENANT: ${{ secrets.AZURE_TENANT }}
+      DATABASE_SECRETS: '${{ secrets.DATABASE_SECRETS }}'
+      BACKEND_SECRETS: '${{ secrets.BACKEND_SECRETS }}'
+      FRONTEND_SECRETS: '${{ secrets.FRONTEND_SECRETS }}'
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: GIT | Checkout
+        uses: actions/checkout@v4
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: SETUP | Key Pair
         run: |
           mkdir key_pairs
-          echo "${{ secrets.KP }}" > connectify_kp.pem
-          sudo chmod 600 connectify_kp.pem
+          echo "${{ secrets.KP }}" > ./key_pairs/connectify_kp
+          sudo chmod 600 ./key_pairs/connectify_kp
 
       - name: Python | Install
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+
+      - name: Ansible | Setup Output
+        uses: actions/github-script@v6
+        if: github.event_name == 'pull_request'  # Only run this for PR events
+        with:
+          github-token: ${{ secrets.PAT_TOKEN }}
+          script: |
+            const fs = require("fs");
+            const output = fs.readFileSync("/tmp/ansible_output.txt", "utf8");
+            const maxGitHubBodyCharacters = 65536;  # Maximum size for GitHub comments
+
+            // Function to split output into smaller chunks if it's too large
+            function chunkSubstr(str, size) {
+              const numChunks = Math.ceil(str.length / size);
+              const chunks = new Array(numChunks);
+              for (let i = 0, o = 0; i < numChunks; ++i, o += size) {
+                chunks[i] = str.substr(o, size);
+              }
+              return chunks;
+            }
+
+            var outputChunks = chunkSubstr(output, maxGitHubBodyCharacters);  // Split if needed
+            for (let i = 0; i < outputChunks.length; i++) {
+              const comment = `### Ansible Playbook Output - Part ${i + 1}
+              <details><summary>Show Output</summary>
+              \`\`\`
+              ${outputChunks[i]}
+              \`\`\`
+              </details>`;
+              
+              // Post the comment on the PR
+              await github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: comment
+              });
+            }
+  
 
       - name: Ansible | Setup
         run: |
@@ -48,3 +81,23 @@ jobs:
           python3 -m pip install --upgrade pip
           pip install ansible==10.7.0
 
+
+      - name: Use Passed Value
+        if: github.event_name == 'repository_dispatch' || github.ref == 'refs/heads/dev_test' && github.event_name == 'push'
+        run: |
+          echo "Value passed from first repo: ${{ github.event.client_payload.trigger }}"
+
+      # - name: Ansible | Execute - DATABASE
+      #   run: |
+      #     ansible-playbook database_playbook.yml -i "${{secrets.HOST_VM}}," -e "ansible_user=${{secrets.ANSIBLE_USER}}" -e "ansible_ssh_private_key_file=./key_pairs/connectify_kp" -e 'ansible_ssh_common_args="-o StrictHostKeyChecking=no"'
+          
+
+      # - name: Ansible | Execute - BACKEND
+      #   run: |
+      #     ansible-playbook backend_playbook.yml -i "${{secrets.HOST_VM}}," -e "ansible_user=${{secrets.ANSIBLE_USER}}" -e "ansible_ssh_private_key_file=./key_pairs/connectify_kp" -e 'ansible_ssh_common_args="-o StrictHostKeyChecking=no"'
+          
+          
+      # - name: Ansible | Execute - FRONTEND
+      #   run: |
+      #     ansible-playbook frontend_playbook.yml -i "${{secrets.HOST_VM}}," -e "ansible_user=${{secrets.ANSIBLE_USER}}" -e "ansible_ssh_private_key_file=./key_pairs/connectify_kp" -e 'ansible_ssh_common_args="-o StrictHostKeyChecking=no"'
+          
